--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -732,9 +732,21 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
            
            @proceedings{opac,
    title = "Software process dynamics and agility : International Conference on Software Process",
-   editor = "Wang, Qing and Pfahl, Dietmar and Raffo, David Mitchell",
-   series = "Lecture notes in computer science",
+   editor = "Wang, Q. and Pfahl, D. and Raffo, D. M.",
+   series = "Lecture notes in computer science, Vol. 4470",
    publisher = "Springer",
    year = 2007
+}
+
+@inproceedings{pinggera2012tracing,
+  title={Tracing the process of process modeling with modeling phase diagrams},
+  author={Pinggera, J. and Zugal, S. and Weidlich, M. and Fahland, D. and Weber, B. and Mendling, J. and Reijers, H. A.},
+  booktitle={Business Process Management Workshops, 2012, S. 370-382},
+  organization={, Springer}
+}
+@inproceedings{forster2012collaborative,
+  title={Collaborative Business Process Modeling},
+  author={Forster, S. and Pinggera, J. and Weber, B.},
+  booktitle={EMISA, 2012, Vol. 206, S. 81-94}
 }
 
