--- a/Masterarbeit 4/Tex/chapter2.tex
+++ b/Masterarbeit 4/Tex/chapter2.tex
@@ -8,7 +8,7 @@ Software Engineering besteht aus mehreren Schichten (Abbildung \ref{fig:Schichte
 
 \begin{figure}[htp]
 \begin{center}
-  \includegraphics[width=.5\linewidth]{SELayer} %pdf, jpg, png...
+  \includegraphics[width=.8\linewidth]{SELayer} %pdf, jpg, png...
   \caption{Schichten des Software Engineering \cite{Puntambekar2007}}
   \label{fig:SchichtenSE}
 \end{center}
@@ -26,7 +26,7 @@ ab und kann mit  \grqq Regel, Form, Muster, Vorbild\grqq \ übersetzt werden \ci
 Der Begriff Prozess stammt von dem lateinischen Wort "processus" ' ab und lässt sich mit "Fortgang oder Verlauf"' übersetzen \cite{koch2011, Staud2006}. \newline 
 Ein Softwareprozess ist eine Abfolge von Schritten, welche zur Herstellung von Software notwendig sind \cite{Mishra2012, Stoerrle2005}. Mit Hilfe eines Softwareentwicklungsprozesses lässt sich der organisatorische Rahmen zur Herstellung von Software beschreiben \cite{Koelmel2000}. Ein Softwareentwicklungsprozess stellt somit ein Modell für die Entwicklung eines Softwaresystems dar \cite{Hanser2010}. Die einzelnen Abschnitte eines Softwareprozesses werden hierbei als Phasen bezeichnet \cite{Stoerrle2005}. Diese werden unterschieden in  \grqq Planung des Prozesses\grqq,  \grqq Spezifikation der Anforderungen an das Produkt\grqq ,  \grqq Design des Softwareprodukts\grqq,  \grqq Implementierung\grqq \ und  \grqq Diverse Tests des Softwareprodukts\grqq \ (siehe Abbildung \ref{fig:SEProzess}).
 
-\begin{figure}[htp]
+\begin{figure}[H]
 \begin{center} 
   \includegraphics[width= 0.8\linewidth]{Softwareprozess} %pdf, jpg, png...
   \caption{Phasen des Softwareprozesses nach \cite{Hanser2010}}
