--- a/Masterarbeit 4/Tex/chapter8.tex
+++ b/Masterarbeit 4/Tex/chapter8.tex
@@ -20,7 +20,7 @@ Die herausgearbeiteten Ergebnisse des Vergleiches wurden mit Hilfe einer Studie 
 
 \section{Ausblick}
 
-Im Laufe der Arbeit haben sich Ideen für weiter Forschungen im Bereich der Anwendbarkeit der imperativen und deklarativen Prozessmodellierungssprachen ergeben, welche jedoch in der vorliegenden Arbeit nicht fortgeführt werden konnten, da sie den Rahmen der Arbeit gesprengt hätten.\newline
+Im Laufe der Arbeit haben sich Ideen für weitere Forschungen im Bereich der Anwendbarkeit der imperativen und deklarativen Prozessmodellierungssprachen ergeben, welche jedoch in der vorliegenden Arbeit nicht fortgeführt werden konnten, da sie den Rahmen der Arbeit gesprengt hätten.\newline
 
 \textbf{Geistige Gewichte für ConDec Constraints}
 
@@ -29,13 +29,13 @@ Um den Vergleich zwischen den in BPMN und ConDec erstellten Modellen zu optimier
 
 \textbf{Geistige Gewichte für verschiedene Elemente in Prozessmodellen}
 
-Genau wie geistige Werte für Constraints an sich nicht vorhanden sind, fehlen auch genaue Werte, in wie stark die Komplexität eines Modelles wächst pro zusätzlichem unterschiedlichem Element. Es wäre z.B. wäre es interessant für genauere Vergleiche zwischen Prozessmodellierungssprachen, in wie weit sich die Komplexität eines Prozessmodelles erhöht, wenn sich darin statt drei unterschiedlicher Elemente fünf unterschiedliche Elemente befinden. Gerade bei den ConDec Modellen gab es oftmals mehr unterschiedliche Constraints in den Modellen als unterschiedliche Gateways in den BPMN Modellen. Daher wäre es für einen exakten Vergleich der Modelle nützlich, wenn man einen genauen Faktor hätte, um den sich die Komplexität in den ConDec Modellen erhöht, in Abhängigkeit der Anzahl der unterschiedlichen Constraints. \newline 
+Genau wie geistige Werte für Constraints an sich nicht vorhanden sind, fehlen auch genaue Werte, in wie stark die Komplexität eines Modelles wächst pro zusätzlichem unterschiedlichem Element. Es wäre z.B. interessant für genauere Vergleiche zwischen Prozessmodellierungssprachen, in wie weit sich die Komplexität eines Prozessmodelles erhöht, wenn sich darin statt drei unterschiedlicher Elemente fünf unterschiedliche Elemente befinden. Gerade bei den ConDec Modellen gab es oftmals mehr unterschiedliche Constraints in den Modellen als unterschiedliche Gateways in den BPMN Modellen. Daher wäre es für einen exakten Vergleich der Modelle nützlich, wenn man einen genauen Faktor hätte, um den sich die Komplexität in den ConDec Modellen erhöht in Abhängigkeit der Anzahl der unterschiedlichen Constraints. \newline 
 
 
 \textbf{Erweiterung/Anpassung ConDec}
 
-Die Prozessmodellierungssprache ConDec hat großes Potenzial. Jedoch weist sie derzeit noch einige Mängel auf. Hier können die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten im Prozessmodell selbst genannt werden. ConDec sollte noch um weitere Notationselemente erweitert werden, welche Rollen und Artefakte darstellen.\newline
-Da auch die vielen unterschiedlichen Constraints bei ConDec ein Problem darstellen, könnte hier in weiterer Forschung versucht werden, die Constraints eventuell anzupassen/umzustellen, um ein kleineres Spektrum an Constraints zu erreichen.\newline
+Die Prozessmodellierungssprache ConDec hat großes Potenzial. Jedoch weist sie derzeit noch einige Mängel auf. Hier können die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten im Prozessmodell selbst genannt werden. ConDec sollte noch um weitere Notationselemente erweitert werden, um Rollen und Artefakte darzustellen.\newline
+Da auch die vielen unterschiedlichen Constraints bei ConDec ein Problem ergeben, könnte hier in weiterer Forschung versucht werden, die Constraints eventuell anzupassen/umzustellen, um ein kleineres Spektrum an Constraints zu erreichen.\newline
 Weiterhin sollte es auch möglich gemacht werden, mehrere Aktivitäten mit dem Init-Constraint auszustatten, um diese als mögliche Startaktivitäten zu markieren. Damit würde etwas Komplexität aus den Modellen heraus genommen werden. Der Leser des Modelles könnte sich dann auf einen Blick orientieren, bei welchen Aktivitäten gestartet werden kann.\newline
 
 \newpage
