--- a/Masterarbeit 4/Tex/masterarbeit.tex
+++ b/Masterarbeit 4/Tex/masterarbeit.tex
@@ -6,7 +6,7 @@
 \headline{Vergleich der Anwendbarkeit von\\deklarativen und imperativen\\Prozessmodellierungsansätzen \\ im Kontext von \\  Softwareentwicklungsprozessen}
 \titel{Thema}
 \jahr{2014}
-\matnr{MATRIKEL NR}
+\matnr{711865}
 \gutachterA{Manfred Reichert}
 \gutachterB{Vera Künzle}
 \betreuer{Gregor Grambow}
