--- a/Masterarbeit 4/Tex/sources.tex
+++ b/Masterarbeit 4/Tex/sources.tex
@@ -40,7 +40,7 @@
   \includegraphics[scale=0.5]{activity} %pdf, jpg, png...
   \end{center}
 & \textbf{activity} \newline
-Eine Aufgabe ist eine Arbeitseinheit\\
+Eine Aktivität ist eine Arbeitseinheit\\
 \hline
 
 \begin{center}
@@ -237,7 +237,7 @@ Beispiel: Korrekt: [A,C,A,B,B]; Inkorrekt: [C]\\
 \textbf{not co-existence}\newline
   Verlangt, dass falls Aktivität A ausgeführt wird, darf Aktivität B nicht mehr ausgeführt werden und umgekehrt.
   \newline
-  Beispiel: Korrekt: [A,C,A,A] ; Inkorrekt: [A,C,A,A,B] \\
+  Beispiel: Korrekt: [A,C,A,A]; Inkorrekt: [A,C,A,A,B] \\
 \hline
 
 \hline
