--- a/Masterarbeit 4/Tex/danksagung.tex
+++ b/Masterarbeit 4/Tex/danksagung.tex
@@ -11,5 +11,5 @@ Zudem danke ich allen Studenten und Doktoranden, die an meiner Studie teilgenomm
 Außerdem möchte ich mich bei meinen Betreuern bei den Unternehmen Airbus Group, Nokia und Daimler AG bedanken, welche mir die letzten fünf Jahre durch Werkstudententätigkeiten die Möglichkeit gegeben haben, meine theoretischen Kenntnisse durch praktische Erfahrungen zu vertiefen und zu erweitern. 
 An dieser Stelle danke ich auch meinen Arbeitskollegen in diesen Unternehmen für die gute Zusammenarbeit.
 
-Des Weiteren bedanke ich mich bei Freunden und Kommilitonen der Universität Ulm für ihre moralische Unterstützung während des Studiums und beim Verfassen dieser Arbeit bedanken. Zudem möchte ich meinen Kommilitonen der Universität Ulm für die angenehme Studienzeit danken. Aus Platzgründen können diese hier nicht alle namentlich erwähnt werden.
+Des Weiteren bedanke ich mich bei Freunden und Kommilitonen der Universität Ulm für ihre moralische Unterstützung während des Studiums und beim Verfassen dieser Arbeit. Zudem möchte ich meinen Kommilitonen der Universität Ulm für die angenehme Studienzeit danken. Aus Platzgründen können diese hier nicht alle namentlich erwähnt werden.
 Weiterhin danke ich meinen Eltern Vera und Rolf Hampp, meiner Schwester Frau Dr. Gabriele Hampp und meiner Patin Frau Ingeborg Grumer, die mich während des Studiums stets unterstützt haben.
